Fixing layout bug in nav section

--- a/themes/site/source/css/main.css
+++ b/themes/site/source/css/main.css
@@ -66,7 +66,9 @@ nav{
 	grid-area: nav;
 
 	/* Layout */
-	position: initial;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	padding: 5px 15px;
 }
 
@@ -127,7 +129,6 @@ aside{
 	grid-area: aside;
 
 	/* Layout */
-	position: initial;
 	padding: 5px 15px;
 }
 aside > h2{
@@ -156,6 +157,7 @@ main{
 	/* Layout */
 	padding: 15px;
 	text-align: initial;
+	line-height: 1.5;
 
 	/* Grid shink fix */
 	min-width: 0;
@@ -202,23 +204,6 @@ footer{
 	background-color: #ffffff;
 	color: black;
 	border-radius: 5px;
-	transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
-	cursor: default;
-}
-.paper-1 {
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-.paper-2 {
-	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-}
-.paper-3 {
-	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
-.paper-4 {
-	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-.paper-5 {
-	box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
 
 /* Responsive Design (Desktop) */
